# mimo

./: .gitignore  Cargo.toml  LICENSE  README.md  tts.md
.github/workflows/: ci.yml
examples/: basic_chat.rs  function_calling.rs  multimodal.rs  streaming_chat.rs  streaming_tts.rs  streaming_tts_advanced.rs  streaming_tts_styled.rs  thinking_mode.rs  tts_basic.rs  tts_chat_styled.rs  tts_chinese.rs  tts_mp3.rs  tts_user_context.rs  voice_cloning.rs  voice_design.rs  web_search.rs
src/: client.rs  error.rs  lib.rs
src/types/: audio.rs  chat.rs  message.rs  mod.rs  response.rs  tool.rs
tests/: integration_test.rs
